fix(badge): make badges with one digit appear like a full circle
Badges that have only 1 digit had a stretched shape. This both looks unusual, and wastes a bit of
space. This is done by setting `box-sizing:border-box`, since that's what we want to use anyway, and
that's what the original values seem to have been intended for.

fix #678

--- a/src/components/badge/badge.scss
+++ b/src/components/badge/badge.scss
@@ -10,6 +10,10 @@
   display: block;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 .badge-container {
     display: inline-block;
     font-size: pxToRem(11);
